<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".BusinessLogin">

    <TextView
        android:id="@+id/BusinessSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="Business Sign in"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/businessNameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BusinessSignin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_white"
        android:drawableLeft="@drawable/baseline_add_business_24"
        android:drawablePadding="20dp"
        android:hint="Business Name"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/BusinessPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/businessNameLogin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_white"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray" />

    <Button
        android:id="@+id/businessLogin_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BusinessPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="LOGIN" />

    <TextView
        android:id="@+id/forgotpasswordBusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/businessLogin_Btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Forgot password?"
        android:textColor="@color/white" />
    <Button
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotpasswordBusiness"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/light_gray"
        android:text="Return to User Login" />
</RelativeLayout>