<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".PostRoutines">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/routinePage"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textAlignment="center"
            android:text="My Routines"/>
        <EditText
            android:id="@+id/customName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:layout_marginRight="100dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="10dp"
            android:background="#30FFFFFF"
            android:textAlignment="center"
            android:hint="My Workout Name"
            android:layout_marginLeft="10dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:scrollbars="none"
            >
            <LinearLayout
                android:id="@+id/containerR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ppl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="0dp">
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/routineToWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bright_green"
                android:text="Workouts" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/trackRoutineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bright_green"
                android:text="Post Routine" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/addRoutine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bright_green"
                android:text="new Workout" />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>