<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Name"
                            android:textColor="@color/black"
                            android:textFontWeight="100"
                            android:textSize="20dp"/>
                        <EditText
                            android:id="@+id/workout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="workout"
                            android:textColor="@color/black"
                            android:textFontWeight="100"
                            android:textSize="20dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/reps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="reps"
                            android:textColor="@color/black"
                            android:textFontWeight="100"
                            android:textSize="20dp"/>
                        <EditText
                            android:id="@+id/sets"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="sets"
                            android:textColor="@color/black"
                            android:textFontWeight="100"
                            android:textSize="20dp"/>
                        <EditText
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="weight"
                            android:textColor="@color/black"
                            android:textFontWeight="100"
                            android:textSize="20dp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical"
                    >
                    <Button
                        android:id="@+id/btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="X"/>
                    <Switch
                        android:id="@+id/switchWorkout"
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>